# moshi.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  replay.h  replay_ops.h  test.mk
cmake/: FindGGML.cmake
examples/: ffmpeg_helpers.h
include/moshi/: json.h  moshi.h
src/: config.h  context.h  ggml_cap.h  ggml_wrap.h  json.cpp  json.h  loader.h  moshi.cpp  ptrs.h  replay.h  replay_ops.h  safetensor.cpp  safetensor.h  torch.h  wav.h
src/moshi/models/: compression.h  lm.h  lm_default.h  lm_utils.h  tts.h
src/moshi/modules/: conv.h  gating.h  rope.h  seanet.h  transformer.h
src/moshi/quantization/: core_vq.h  vq.h
src/moshi/utils/: sampling.h
tools/: CMakeLists.txt  common_av.h  common_ggml.h  ffmpeg_helpers.h  kyutai_defaults.txt  kyutai_moshika-pytorch-bf16.txt  kyutai_moshiko-pytorch-bf16.txt  kyutai_stt-1b-en_fr-candle.txt  kyutai_stt-2.6b-en.txt  kyutai_tts-0.75b-en-public.txt  kyutai_tts-1.6b-en_fr.txt  kyutai_tts-voices.txt  mimi-decode.cpp  mimi-echo.cpp  mimi-encode.cpp  mimi-play.cpp  moshi-config.json  moshi-dl.cpp  moshi-dl.json  moshi-sts.cpp  moshi-stt.cpp  moshi-tts.cpp  moshi.h  personaplex.cpp  sdl_helper.h  util.h
